--- a/website/templates/ml.html
+++ b/website/templates/ml.html
@@ -24,7 +24,7 @@
                         {#    </a>#}
                         {#</li>#}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('ml_api.project',name='mnist') }}">
+                            <a class="nav-link" href="{{ url_for('ml_api.project',project_name='mnist') }}">
                                 Handwritten Digit
                             </a>
                         </li>
