--- a/docs/.vuepress/theme/templates/dev.html
+++ b/docs/.vuepress/theme/templates/dev.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title></title>
+    <script>
+      var global = global || window;
+      var Buffer = Buffer || [];
+      var process = process || {
+        env: { DEBUG: undefined, NODE_ENV: "production", VUE_APP_ML_API_URL: "http://ziliang.red/ml-api", VUE_APP_DEBUG: true, },
+        version: []
+      };
+    </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pseudocode@latest/build/pseudocode.min.css">
     <script src="https://cdn.jsdelivr.net/npm/pseudocode@latest/build/pseudocode.min.js"></script>
     <script>
