--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -75,6 +75,7 @@ div[class*="language-"]
           width $lineNumbersWrapperWidth
           height 100%
           background-color rgba(255, 235, 59, 0.5)
+          border-right 1px solid #575757
     pre
       padding-left $lineNumbersWrapperWidth + 1 rem
       vertical-align middle
@@ -102,7 +103,7 @@ div[class*="language-"]
       width $lineNumbersWrapperWidth
       height 100%
       border-radius 6px 0 0 6px
-      border-right 1px solid rgba(0, 0, 0, 66%)
+      border-right 1px solid #575757
       background-color $codeBgColor
 
 
