--- a/docs/.vuepress/theme/templates/ssr.html
+++ b/docs/.vuepress/theme/templates/ssr.html
@@ -10,7 +10,12 @@
       var global = global || window;
       var Buffer = Buffer || [];
       var process = process || {
-        env: { DEBUG: undefined, NODE_ENV: "production", VUE_APP_ML_API_URL: "http://ziliang.red/ml-api", VUE_APP_DEBUG: false, },
+        env: {
+          DEBUG: undefined,
+          NODE_ENV: "production",
+          VUE_APP_ML_API_URL: "http://ziliang.red/ml-api",
+          VUE_APP_DEBUG: false,
+        },
         version: []
       };
     </script>
