--- a/docs/.vuepress/theme/styles/palette.styl
+++ b/docs/.vuepress/theme/styles/palette.styl
@@ -2,3 +2,4 @@
 $sidebarWidth = 300px
 // $accentColor = #EB7E26
 $codeBgColor = #F5F5F5
+$contentWidth = 1100px  // keep consistent with components/Jupyter.vue->iframe/max-width
