--- a/docs/.vuepress/theme/templates/ssr.html
+++ b/docs/.vuepress/theme/templates/ssr.html
@@ -13,14 +13,12 @@
         env: {
           DEBUG: undefined,
           NODE_ENV: "production",
-          VUE_APP_ML_API_URL: "http://ziliang.red/ml-api",
+          VUE_APP_ML_API_URL: "/ml-api",
           VUE_APP_DEBUG: false,
         },
         version: []
       };
     </script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pseudocode@latest/build/pseudocode.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/pseudocode@latest/build/pseudocode.min.js"></script>
     <script>
       MathJax = {
         tex: {
