--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -1,5 +1,10 @@
 @require '~vuepress-plugin-tabs/dist/themes/default.styl'
 
+table
+  display table
+  margin-left auto
+  margin-right auto
+
 {$contentClass}
   code
     text-shadow: none
