--- a/docs/.vuepress/theme/templates/ssr.html
+++ b/docs/.vuepress/theme/templates/ssr.html
@@ -32,6 +32,8 @@
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-chtml.js"
       integrity="sha256-3Fdoa5wQb+JYfEmTpQHx9sc/GuwpfC/0R9EpBki+mf8=" crossorigin>
       </script>
+    <script src="js/breakpoints.min.js"></script>
+
     {{{ userHeadTags }}}
     {{{ pageMeta }}}
     {{{ renderResourceHints() }}}
